Feat(Consumer) : 돈을 로또 가격으로 나누는 기능 추가